[gd_scene load_steps=4 format=3 uid="uid://bcq5gqpyjjaem"]

[ext_resource type="Script" uid="uid://cucqo0ecd3jj2" path="res://scripts/apps/browser/shop-site/shop_item.gd" id="1_btjjm"]
[ext_resource type="Texture2D" uid="uid://dkon78svv3gjr" path="res://icon.svg" id="1_lrx6i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btjjm"]
bg_color = Color(0.929715, 0.929715, 0.929715, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.109804, 0.109804, 0.109804, 0.0745098)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[node name="shop_item" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btjjm")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 0)
layout_mode = 0
offset_right = 480.0
offset_bottom = 758.0
theme_override_styles/panel = SubResource("StyleBoxFlat_btjjm")

[node name="item_icon" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.5
offset_top = 15.0
offset_right = 154.5
offset_bottom = 280.0
grow_horizontal = 2
texture = ExtResource("1_lrx6i")
stretch_mode = 5

[node name="item_name" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -74.0
offset_right = 230.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Nome do item
"
autowrap_mode = 3

[node name="buy_button" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 594.0
offset_right = 298.0
offset_bottom = 706.0
theme_override_font_sizes/font_size = 40
text = "COMPRAR"

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 342.0
offset_top = 532.0
offset_right = 462.0
offset_bottom = 739.0

[node name="add_item" type="Button" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "+
"

[node name="item_quantity" type="Label" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -39.5
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 55
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="remove_item" type="Button" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "-"

[connection signal="pressed" from="Panel/Panel/add_item" to="." method="_on_add_item_pressed"]
[connection signal="pressed" from="Panel/Panel/remove_item" to="." method="_on_remove_item_pressed"]
